--- a/src/components/day-of-week/day-of-week-mix.pug
+++ b/src/components/day-of-week/day-of-week-mix.pug
@@ -1,19 +1,19 @@
 mixin days(data)
     .body__item
-        .body__day.Heading=data.day
-        .body__desc.desc
+        .body__day.Heading.w-d=data.day
+        .body__desc.desc.w-desc
             .desc__item
-                .desc__times=data.time
-                .desc__class=data.classG
-                .desc__coach=data.coach
-                .desc__level=data.level
+                .desc__times.w-d-i=data.time
+                .desc__class.w-d-i=data.classG
+                .desc__coach.w-d-i=data.coach
+                .desc__level.w-d-i.level=data.level
             .desc__item
-                .desc__times=data.time1
-                .desc__class=data.classG1
-                .desc__coach=data.coach1
-                .desc__level=data.level1
+                .desc__times.w-d-i=data.time1
+                .desc__class.w-d-i=data.classG1
+                .desc__coach.w-d-i=data.coach1
+                .desc__level.w-d-i.level=data.level1
             .desc__item
-                .desc__times=data.time2
-                .desc__class=data.classG2
-                .desc__coach=data.coach2
-                .desc__level=data.level2
+                .desc__times.w-d-i=data.time2
+                .desc__class.w-d-i=data.classG2
+                .desc__coach.w-d-i=data.coach2
+                .desc__level.w-d-i.level=data.level2
