--- a/src/components/day-of-week/day-of-week.scss
+++ b/src/components/day-of-week/day-of-week.scss
@@ -3,17 +3,17 @@
   padding: 9px 0 20px 0;
   border-top: 1px solid #979797;
   .body__day {
-    width: $w-20;
+    //width: $w-20;
   }
   .body__desc.desc {
-    width: $w-80;
+    //width: $w-80;
   }
   .desc__item {
     display: flex;
     margin-bottom: 10px;
   }
   .desc__times, .desc__class, .desc__coach, .desc__level {
-    width: $w-25;
+    //width: $w-25;
   }
   .desc__times {
   }
