--- a/src/pages/page-schedule/page-schedule.pug
+++ b/src/pages/page-schedule/page-schedule.pug
@@ -113,11 +113,11 @@ block content
             .header__subtitle.Subtitle Apart from working on effective products for businesses, our specialists organize educational programs for business owners and managers.
         .schedule__section.section
             .section__heading.heading
-                .heading__item.Heading-large Date
-                .heading__item.Heading-large Time
-                .heading__item.Heading-large Class
-                .heading__item.Heading-large Coach
-                .heading__item.Heading-large Level
+                .heading__item.Heading-large.w-h Date
+                .heading__item.Heading-large.w-h Time
+                .heading__item.Heading-large.w-h Class
+                .heading__item.Heading-large.w-h Coach
+                .heading__item.Heading-large.w-h.level Level
             .section__body.body
                 each item in dayM
                     +days(item)
