--- a/src/components/day-of-week/day-of-week-mix.pug
+++ b/src/components/day-of-week/day-of-week-mix.pug
@@ -1,19 +1,6 @@
 mixin days(data)
-    .body__item
-        .body__day.Heading.w-d=data.day
-        .body__desc.desc.w-desc
-            .desc__item
-                .desc__times.w-d-i=data.time
-                .desc__class.w-d-i=data.classG
-                .desc__coach.w-d-i=data.coach
-                .desc__level.w-d-i.level=data.level
-            .desc__item
-                .desc__times.w-d-i=data.time1
-                .desc__class.w-d-i=data.classG1
-                .desc__coach.w-d-i=data.coach1
-                .desc__level.w-d-i.level=data.level1
-            .desc__item
-                .desc__times.w-d-i=data.time2
-                .desc__class.w-d-i=data.classG2
-                .desc__coach.w-d-i=data.coach2
-                .desc__level.w-d-i.level=data.level2
+    .desc__item
+        .desc__times=data.time
+        .desc__class=data.classG
+        .desc__coach=data.coach
+        .desc__level.level=data.level
