--- a/src/components/day-of-week/day-of-week-mix.pug
+++ b/src/components/day-of-week/day-of-week-mix.pug
@@ -2,5 +2,5 @@ mixin days(data)
     .desc__item
         .desc__times=data.time
         .desc__class=data.classG
-        .desc__coach=data.coach
+        .desc__coach.coach=data.coach
         .desc__level.level=data.level
