--- a/src/components/day-of-week/day-of-week.scss
+++ b/src/components/day-of-week/day-of-week.scss
@@ -5,14 +5,43 @@
 
   @include media-mobile {
     flex-direction: column;
-    padding: 9px 24px 30px 0;
   }
 
   .body__day {
     flex: 1 1 0;
+    position: relative;
 
     @include media-mobile {
       margin-bottom: 15px;
+      cursor: pointer;
+    }
+
+    .arrow-down {
+      display: none;
+
+      @include media-mobile {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        display: block;
+        width: 24px;
+        height: 24px;
+        background: url(../images/content/down-arrow.png) no-repeat center;
+        background-size: 18px;
+        transform: translateY(-50%);
+        transition: transform $time-anim;
+      }
+    }
+
+    &.open {
+
+      .arrow-down {
+        transform: translateY(-50%) rotate(-180deg);
+      }
+
+      ~.body__desc.desc {
+        display: block;
+      }
     }
   }
   .body__desc.desc {
@@ -20,6 +49,8 @@
 
     @include media-mobile {
       align-self: flex-end;
+      display: none;
+      padding-right: 24px;
     }
   }
   .desc__item {
@@ -32,15 +63,13 @@
     }
 
     @include media-mobile {
+      flex-direction: column;
       padding-bottom: 25px;
     }
   }
   .desc__times, .desc__class, .desc__coach, .desc__level {
     flex: 1 1 0;
 
-    @include media-mobile {
-      padding: 5px 0;
-    }
   }
   .desc__times {
   }
