--- a/src/bases/typography.scss
+++ b/src/bases/typography.scss
@@ -15,8 +15,13 @@ body {
   }
 }
 
-h1 {
-  margin: auto;
+h1, h2, h3, menu {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
 }
 
 a {
