--- a/src/pages/page-schedule/page-schedule.scss
+++ b/src/pages/page-schedule/page-schedule.scss
@@ -9,6 +9,10 @@
   }
   .header__title {
     margin-bottom: 15px;
+
+    @include media-mobile {
+      margin-bottom: 0;
+    }
   }
   .header__subtitle {
 
@@ -16,10 +20,10 @@
       display: none;
     }
   }
-  .schedule__section.section {
+  .schedule__main.main {
     margin-top: 50px;
   }
-  .section__heading.heading {
+  .main__heading.heading {
     display: flex;
     justify-content: space-between;
   }
@@ -32,11 +36,11 @@
     }
 
   }
-  .section__body.body {
+  .main__section.section {
     display: flex;
     flex-direction: column;
   }
-  .section__footer.footer {
+  .main__footer.footer {
     display: flex;
 
     justify-content: center;
@@ -78,7 +82,7 @@
 
     }
 
-    .body__desc {
+    .section__desc {
       flex: 3 1 0;
     }
   }
@@ -104,7 +108,7 @@
       display: none;
     }
 
-    .body__desc {
+    .section__desc {
       flex: 2 1 0;
     }
 
@@ -119,7 +123,7 @@
       }
     }
 
-    .body__desc {
+    .section__desc {
 
       @include media-tablet {
         flex: 3 1 0;
@@ -139,7 +143,7 @@
     .header__subtitle {
       display: none;
     }
-    .body__desc {
+    .section__desc {
       flex: 3 1 0;
     }
   }
@@ -150,7 +154,7 @@
       display: none;
     }
 
-    .body__desc {
+    .section__desc {
       flex: 3 1 0;
     }
 
@@ -165,7 +169,7 @@
       display: none;
     }
 
-    .body__desc {
+    .section__desc {
       flex: 3 1 0;
     }
 
@@ -185,7 +189,7 @@
       display: none;
     }
 
-    .body__desc {
+    .section__desc {
       flex: 3 1 0;
     }
 
